fix file naming
[Finishes #169173886]
