# src/controllers/characterController.js
@@ -4,12 +4,12 @@ import services from '../services';
 const { responseHelper } = helpers;
 const {
   characterService: {
-    findCharacters,
+    fetchCharacters,
     queryFilter,
     characterExtract,
     getMetadata
   },
-  movieService: { findMovie }
+  movieService: { fetchMovie }
 } = services;
 
 /**
@@ -23,7 +23,7 @@ const getCharacters = async (request, response) => {
     params: { episodeId },
     query: { sort, order, filter }
   } = request;
-  const movie = await findMovie(episodeId);
+  const movie = await fetchMovie(episodeId);
   if (!sort && order) {
     return responseHelper(response, 400, {
       error: 'order cannot be used without a sort parameter'
@@ -32,11 +32,15 @@ const getCharacters = async (request, response) => {
   if (!movie) {
     return responseHelper(response, 404, { error: 'movie not found' });
   }
-  const characters = await findCharacters(movie);
+  const characters = await fetchCharacters(movie);
   const charactersFilter = queryFilter(characters, sort, order, filter);
   const movieCharacters = characterExtract(charactersFilter);
   const metadata = getMetadata(movieCharacters);
-  return responseHelper(response, 200, { metadata, movieCharacters });
+  return responseHelper(response, 200, {
+    status: true,
+    message: 'character successfully retrieved',
+    data: [{ movieCharacters, metadata }]
+  });
 };
 
 export default { getCharacters };
